# cuddly_kangaroo

./: .gitignore  Cargo.toml  gamozolabs.com.toml
content/: index.md  list.html  post.css
content/blog/: bloggy.md
gamozolabs.com/: header.md  index.md  post.html
gamozolabs.com/blog/: blog1.md  blog2.md
src/: main.rs
